--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,12 @@ path {
   stroke-opacity: .1;
   /*opacity: 1;*/
 }
+#date-show{
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  color: #fff;
+  font-size: 16px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light","Helvetica Neue", Helvetica,sans-serif;
+  font-weight: 300;
+}
